--- a/Lab2/pzpi-22-6-kryvko-roman-lab2/src/main/resources/application.properties
+++ b/Lab2/pzpi-22-6-kryvko-roman-lab2/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/atark
 spring.datasource.username=postgres
 spring.datasource.password=""
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.format-sql=true
